implementato pulsante aggiungi promozione